😎 add : new files

--- a/cell02/ex03/card.html
+++ b/cell02/ex03/card.html
@@ -11,7 +11,9 @@
 <body>
   <h1>User Profile Card</h1>
   <div class="card">
-    <img src="https://play-lh.googleusercontent.com/XVHP0sBKrRJYZq_dB1RalwSmx5TcYYRRfYMFO18jgNAnxHAIA1osxM55XHYTb3LpkV8" alt="">
+    <a href="http://kitton.vercel.app" target="_blank" rel="noopener noreferrer">
+      <img src="https://play-lh.googleusercontent.com/XVHP0sBKrRJYZq_dB1RalwSmx5TcYYRRfYMFO18jgNAnxHAIA1osxM55XHYTb3LpkV8" alt="">
+    </a>
     <h2>Klambang</h2>
     <p class="kmitl">CE KMITL 61</p>
     <p class="42bkk">42Bangkok</p>
@@ -21,8 +23,8 @@
       <a target="_blank" href="https://instagram.com/kitton._"><i class="fa-brands fa-instagram"></i></a>
       <a target="_blank" href="https://facebook.com/thunder2004"><i class="fa-brands fa-facebook-f"></i></a>
     </div>
-    <div class="btn-container">
-      <button type="button" class="btn">Contact</button>
+    <div class="contact-container">
+      <a class="contact" target="_blank" href="https://kitton.vercel.app">Contact</a>
     </div>
   </div>
 </body>
