--- a/cell03/ex03/index.html
+++ b/cell03/ex03/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Tab</title>
+  <title>todo</title>
 </head>
+<body onload="loadData()">
+  <h1>todo list</h1>
+  <div id="ft_list">
+    <button id="btn" onclick="addItem()">New</button>
+    <div id="todo">
 
-<body>
-  <div class="box-container">
-    <div id="box1" class="box"><p>Hello</p></div>
-    <div id="box2" class="box"><p>World</p></div>
+    </div>
   </div>
+  <script src="todo.js"></script>
 </body>
-
 </html>
